# StellarEngine

./: CMakeLists.txt
Dependencies/stb_image/: stb_image.h
include/: Renderer.h  Shader.h  Texture.h  Window.h
src/: Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
